CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(CaveStory C CXX)

#flags for compiling
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -gdb -Wall -Wextra -Winline -pedantic -std=c++11")
#SET(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -gdb -std=gnu99")

SET(BOOST_ROOT  "${CMAKE_SOURCE_DIR}/libs")
SET(GTEST_ROOT  "${CMAKE_SOURCE_DIR}/libs")

FIND_PACKAGE(Boost 1.56.0 REQUIRED)
FIND_PACKAGE(SDL 1.2 REQUIRED)
FIND_PACKAGE(GTest REQUIRED)

INCLUDE_DIRECTORIES(
    ${Boost_INCLUDE_DIR}
    ${SDL_INCLUDE_DIR}
)

#ADD_SUBDIRECTORY(src)

FILE(GLOB_RECURSE SRC_FILES ${PROJECT_SOURCE_DIR}/src/*.cpp)
FILE(GLOB_RECURSE TEST_FILES ${PROJECT_SOURCE_DIR}/src/*.cpp)

ADD_EXECUTABLE(CaveStory ${SRC_FILES})
ADD_EXECUTABLE(CaveStoryTest ${SRC_FILES})

TARGET_LINK_LIBRARIES(CaveStory
    ${Boost_LIBRARIES}
    ${SDL_LIBRARY}
)

TARGET_LINK_LIBRARIES(CaveStory
    ${Boost_LIBRARIES}
    ${SDL_LIBRARY}
    ${GTEST_BOTH_LIBRARIES}
)
