SET(CAVE_MAIN
    "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
)

SET(CAVE_SOURCES
    ${CAVE_SOURCES}
    "${CMAKE_CURRENT_SOURCE_DIR}/game.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/sprite.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/graphics.cpp"
)

SET(CAVE_HEADERS
    ${CAVE_HEADERS}
    "${CMAKE_CURRENT_SOURCE_DIR}/game.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/sprite.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/graphics.hpp"
)

ADD_LIBRARY(
    ${CAVE_LIB}
    STATIC
    ${CAVE_SOURCES}
    ${CAVE_HEADERS}
)

ADD_EXECUTABLE(CaveStory ${CAVE_MAIN})

TARGET_LINK_LIBRARIES(${CAVE_LIB}
    ${Boost_LIBRARIES}
    ${SDL_LIBRARY}
    ${CAVE_THREAD_LIBS_INIT}
)
TARGET_LINK_LIBRARIES(CaveStory ${CAVE_LIB})
