SET(CAVE_TEST_SOURCES
    ${CAVE_TEST_SOURCES}
    "${CMAKE_CURRENT_SOURCE_DIR}/gtest_example_primer.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/test_main.cpp"
)

SET(CAVE_TEST_HEADERS
    ${CAVE_TEST_HEADERS}
)

ADD_EXECUTABLE(CaveStoryTest ${CAVE_TEST_SOURCES})

TARGET_LINK_LIBRARIES(CaveStoryTest
    ${CAVE_LIB}
    ${GTEST_BOTH_LIBRARIES}
)

